add sae aero design videos

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -118,7 +118,8 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/clXUVxfD-9w"></iframe>
+                    <iframe src="https://www.youtube.com/embed/wKr7KCYWeT8"></iframe>
                 </p>
             </div>
             <div class="slide s33">
