--- a/projects_gen_backup.html
+++ b/projects_gen_backup.html
@@ -49,6 +49,17 @@
                     <iframe src="https://www.youtube.com/embed/YXchdEtqzsE"></iframe>
                 </p>
             </div>
+            <div class="slide s14">
+                <h1>Motorcycle Gear Shifting Automation</h1>
+                <h3>Capstone Project - Bachelor's in Mechanical Engineering</h3>
+                <p class="info">
+                    For our undergraduate project, we decided to design and fabricate a <u>bolt-on automation system</u> to convert a motorcycle's controls into those similar to an automatic scooter.<br>This included automating the <u>clutch, gears and throttle</u> to follow rider input while considering engine RPM, speed, etc. <br><br>This video was made as a submission to the CS50 MOOC course, and shows a representation of what we had imaged for the project.
+                </p>
+                </br>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/eVmGcuafOZo"></iframe>
+                </p>
+            </div>
         </div>
         <div class="section">
             <div class="slide s21">
