new divs, add deep orange stuff

--- a/projects_gen_backup.html
+++ b/projects_gen_backup.html
@@ -13,28 +13,6 @@
     <div id="fullPage">
         <div class="section">
             <div class="slide s11">
-                <h1>Car Datalogger</h1>
-                <h3>Data collection during AutoX events</h3>
-                <p class="info">
-                    As a challenge, I engineered a datalogger for my car to collect inertial and GPS data while participating in AutoX events.<br>The result was this ESP32-based device, for which more information can be found on <a style="color:grey" href="https://github.com/TanmayChhatbar/car_datalogger" target="_blank"><u>GitHub</u></a>.<br><br><u>TTGO TS 1.4</u> ESP32-based board, with built-in <u>MPU9250 IMU</u> and a microSD card reader, was used.<br><u>Adafruit Ultimate GPS</u> module is used to get GPS data.<br>Inertial data is collected at around 300Hz, GPS data is collected at 5Hz.
-                </p>
-                </br>
-                <p>
-                    <iframe src="comingsoon.html"></iframe>
-                </p>
-            </div>
-            <div class="slide s12">
-                <h1>Small scale ADAS</h1>
-                <h3>Clemson University - International Center of Automotive Research</h3>
-                <p class="info">
-                    As part of our capstone project for the course 'Automotive Electronics Integration', we were tasked to introduce and demonstrate ADAS systems in a scale vehicle.<br><br>An <u>Arduino Uno</u> board was the central processor for the project.<br><u>HC-SR04</u> ultrasonic sensors were used to detect the sidewalls acting as lanes, and the presence of a head-on obstacle.<br><br>The video goes over our approach and results in introducing features including:<ul class="feat"><li>Lane-Keep Assist</li><li>Adaptive Cruise Control</li></ul>
-                </p>
-                </br>
-                <p>
-                    <iframe src="https://www.youtube.com/embed/nMBGIg3d_ZA"></iframe>
-                </p>
-            </div>
-            <div class="slide s13">
                 <h1>Autonomous Robot</h1>
                 <h3>Clemson University - International Center of Automotive Research</h3>
                 <p class="info">
@@ -49,7 +27,18 @@
                     <iframe src="https://www.youtube.com/embed/YXchdEtqzsE"></iframe>
                 </p>
             </div>
-            <div class="slide s14">
+            <div class="slide s12">
+                <h1>Small scale ADAS</h1>
+                <h3>Clemson University - International Center of Automotive Research</h3>
+                <p class="info">
+                    As part of our capstone project for the course 'Automotive Electronics Integration', we were tasked to introduce and demonstrate ADAS systems in a scale vehicle.<br><br>An <u>Arduino Uno</u> board was the central processor for the project.<br><u>HC-SR04</u> ultrasonic sensors were used to detect the sidewalls acting as lanes, and the presence of a head-on obstacle.<br><br>The video goes over our approach and results in introducing features including:<ul class="feat"><li>Lane-Keep Assist</li><li>Adaptive Cruise Control</li></ul>
+                </p>
+                </br>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/nMBGIg3d_ZA"></iframe>
+                </p>
+            </div>
+            <div class="slide s13">
                 <h1>Motorcycle Gear Shifting Automation</h1>
                 <h3>Capstone Project - Bachelor's in Mechanical Engineering</h3>
                 <p class="info">
@@ -63,6 +52,37 @@
         </div>
         <div class="section">
             <div class="slide s21">
+                <h1>Car Datalogger</h1>
+                <h3>Data collection during AutoX events</h3>
+                <p class="info">
+                    As a challenge, I engineered a datalogger for my car to collect inertial and GPS data while participating in AutoX events.<br>The result was this ESP32-based device, for which more information can be found on <a style="color:grey" href="https://github.com/TanmayChhatbar/car_datalogger" target="_blank"><u>GitHub</u></a>.<br><br><u>TTGO TS 1.4</u> ESP32-based board, with built-in <u>MPU9250 IMU</u> and a microSD card reader, was used.<br><u>Adafruit Ultimate GPS</u> module is used to get GPS data.<br>Inertial data is collected at around 300Hz, GPS data is collected at 5Hz.
+                </p>
+                </br>
+                <p>
+                    <iframe src="comingsoon.html"></iframe>
+                </p>
+            </div>
+            <div class="slide s22">
+                <h1>Multi-wheeled vehicle modelling</h1>
+                <h3>Deep Orange 13-14 - Clemson University</h3>
+                <p class="info">
+                    Estimation of forces and resultant motion is an important component of vehicle design and control.<br>
+                    We have modelled tools of varying complexity to better understand the dynamic limits of the vehicle we develop. Some of them are shown below<br><br>
+                    <ol class="feat">
+                        <li> Shows the most complex, most "true" model, created in Simscape Multibody.<br>It considers the tracks around the wheels and its interaction with the ground.</li>
+                        <li> Shows a much simpler, real-time capable model in MATLAB.</li>
+                        <li> Compilation of funny and failed simulations, just for laughs.</li>
+                    </ol>
+                </p>
+                </br>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/IsC2Qz7YGao"></iframe>
+                    <iframe src="https://www.youtube.com/embed/obmg_0Rq8ow"></iframe>
+                </p>
+            </div>
+        </div>
+        <div class="section">
+            <div class="slide s31">
                 <h1>i1Pro 3 Automated Plotter 2021</h1>
                 <h3>Designed, manufactured and programmed by self</h3>
                 <p class="info">
@@ -73,7 +93,7 @@
                     <iframe src="https://www.youtube.com/embed/pWplQDCc0bk"></iframe>
                 </p>
             </div>
-            <div class="slide s22">
+            <div class="slide s32">
                 <h1>DIY Smartwatch</h1>
                 <h3>Designed, manufactured and programmed by self</h3>
                 <p class="info">
@@ -84,7 +104,7 @@
                     <iframe src="https://www.youtube.com/embed/iW4tt_eioQQ"></iframe>
                 </p>
             </div>
-            <div class="slide s23">
+            <div class="slide s33">
                 <h1>Project Render</h1>
                 <h3>In learning Blender modelling software</h3>
                 <p class="info">
@@ -97,7 +117,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="slide s31">
+            <div class="slide s41">
                 <h1>Boeing Aeromodelling 2019-20 - IIT Kharagpur</h1>
                 <h3>Finishing 3<sup>rd</sup> place overall</h3>
                 <p class="info">
@@ -110,7 +130,7 @@
                     <iframe src="https://www.youtube.com/embed/twtrokqZ5k0"></iframe>
                 </p>
             </div>
-            <div class="slide s32">
+            <div class="slide s42">
                 <h1>SAE Aero Design East 2019</h1>
                 <h3>7th* in Mission Performance</h3>
                 <p class="info">
@@ -118,10 +138,11 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/clXUVxfD-9w"></iframe>
+                    <iframe src="https://www.youtube.com/embed/wKr7KCYWeT8"></iframe>
                 </p>
             </div>
-            <div class="slide s33">
+            <div class="slide s43">
                 <h1>Speedy G</h1>
                 <h3>"I am Speed!", said the Little Bird</h3>
                 <p class="info">
@@ -132,7 +153,7 @@
                     <iframe src="https://www.youtube.com/embed/T2X-0we-XOU"></iframe>
                 </p>
             </div>
-            <div class="slide s34">
+            <div class="slide s44">
                 <h1>The adventures of foomie</h1>
                 <h3>The tiniest little RC plane I made</h3>
                 <p class="info">
@@ -144,7 +165,7 @@
                     <iframe src="https://www.youtube.com/embed/nO6BWNPSGuY"></iframe>
                 </p>
             </div>
-            <div class="slide s35">
+            <div class="slide s45">
                 <h1>Aerobatics</h1>
                 <h3>What fun is flying straight</h3>
                 <p class="info">
@@ -157,7 +178,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="slide s41">
+            <div class="slide s51">
                 <h1>Improvements in the Factory</h1>
                 <h3>Stagnation isn't good for mind or business</h3>
                 <p class="info">
@@ -168,9 +189,20 @@
                     <iframe src="comingsoon.html"></iframe>
                 </p>
             </div>
+            <div class="slide s52">
+                <h1>Improvements at home</h1>
+                <h3>Stagnation isn't good at home either</h3>
+                <p class="info">
+                    Who likes to stand up and walk over to the switch board to turn the lights on?<br>Who enjoys trying to find the AC remote when it's really hot and you're desperate to be lazy?
+                </p>
+                </br>
+                <p>
+                    <iframe src="comingsoon.html"></iframe>
+                </p>
+            </div>
         </div>
         <div class="section">
-            <div class="slide s51">
+            <div class="slide s61">
                 <h1>What is fun, motivates you.</h1>
                 <h3>What is love, baby</h3>
                 <p class="info">
@@ -200,8 +232,8 @@
         new fullpage('#fullPage', {
             autoScrolling: true,
             navigation: true,
-            anchors: ['automotive','other','aero','factory','fun'],
-            navigationTooltips: ['Automotive Projects','Other Projects','Aeromodelling','Factory','Activity'],
+            anchors: ['auto_robo','auto_model','other','aero','imp','fun'],
+            navigationTooltips: ['Automotive Robotics','Automotive Data & Analysis','Other Projects','Aeromodelling','Improvements','Activity'],
             showActiveTooltip: true,
             slidesNavigation: true,
             controlArrows: false,
