--- a/projects_gen.html
+++ b/projects_gen.html
@@ -182,11 +182,18 @@
                 <h1>Improvements in the Factory</h1>
                 <h3>Stagnation isn't good for mind or business</h3>
                 <p class="info">
-                    I've designed and manufactured multiple automation solutions for use in a factory.<br>These include automatic <u>bottle fillers</u> for packaging soaps and detergents, and miscellaneous devices for streamlining workflow in processing of potato starch.
+                    During my undergraduate studies, I designed and manufactured multiple automation solutions and miscellaneous devices for streamlining workflow in processing of potato starch, soaps and detergents. for use in a factory.<br>These include:
+					<ol class="feat">
+						<li>Automatic bottle fillers for packaging soaps and detergents</li>
+						<li>Sound-based acid flow-rate and quantity estimation for positive displacement pumps.</li>
+						<li>Packaging heatshrink auto-cutter.</li>
+					</ol>
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/XmRJAW47A9g"></iframe>
+                    <iframe src="https://www.youtube.com/embed/5h9r28wX8vo"></iframe>
+                    <iframe src="https://www.youtube.com/embed/MwPSW_m9hzk"></iframe>
                 </p>
             </div>
             <div class="slide s52">
@@ -197,7 +204,8 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/3ymYBt0vYeg"></iframe>
+                    <iframe src="https://www.youtube.com/embed/ehGC3uAFM-8"></iframe>
                 </p>
             </div>
         </div>
