--- a/projects_gen_backup.html
+++ b/projects_gen_backup.html
@@ -67,12 +67,12 @@
                 <h3>Deep Orange 13-14 - Clemson University</h3>
                 <p class="info">
                     Estimation of forces and resultant motion is an important component of vehicle design and control.<br>
-                    We have modelled tools of varying complexity to better understand the dynamic limits of the vehicle we develop. Some of them are shown below<br><br>
-                    <ol class="feat">
-                        <li> Shows the most complex, most "true" model, created in Simscape Multibody.<br>It considers the tracks around the wheels and its interaction with the ground.</li>
-                        <li> Shows a much simpler, real-time capable model in MATLAB.</li>
-                        <li> Compilation of funny and failed simulations, just for laughs.</li>
-                    </ol>
+					We have modelled tools of varying complexity to better understand the dynamic limits of the vehicle we develop. Some of them are shown below<br><br>
+					<ol class="feat">
+						<li> Shows the most complex, most "true" model, created in Simscape Multibody.<br>It considers the tracks around the wheels and its interaction with the ground.</li>
+						<li> Shows a much simpler, real-time capable model in MATLAB.</li>
+						<li> Compilation of funny and failed simulations, just for laughs.</li>
+						</ol>
                 </p>
                 </br>
                 <p>
@@ -182,11 +182,18 @@
                 <h1>Improvements in the Factory</h1>
                 <h3>Stagnation isn't good for mind or business</h3>
                 <p class="info">
-                    I've designed and manufactured multiple automation solutions for use in a factory.<br>These include automatic <u>bottle fillers</u> for packaging soaps and detergents, and miscellaneous devices for streamlining workflow in processing of potato starch.
+                    During my undergraduate studies, I designed and manufactured multiple automation solutions and miscellaneous devices for streamlining workflow in processing of potato starch, soaps and detergents. for use in a factory.<br>These include
+					<ol class="feat">
+						<li>Automatic bottle fillers for packaging soaps and detergents</li>
+						<li>Sound-based acid flow-rate and quantity estimation for positive displacement pumps.</li>
+						<li>Packaging heatshrink auto-cutter.</li>
+					</ol>
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/XmRJAW47A9g"></iframe>
+                    <iframe src="https://www.youtube.com/embed/5h9r28wX8vo"></iframe>
+                    <iframe src="https://www.youtube.com/embed/MwPSW_m9hzk"></iframe>
                 </p>
             </div>
             <div class="slide s52">
@@ -197,7 +204,8 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/3ymYBt0vYeg"></iframe>
+                    <iframe src="https://www.youtube.com/embed/ehGC3uAFM-8"></iframe>
                 </p>
             </div>
         </div>
