--- a/projects_gen_backup.html
+++ b/projects_gen_backup.html
@@ -13,7 +13,7 @@
     <div id="fullPage">
         <div class="section">
             <div class="slide s11">
-                <h1>Autonomous Robot</h1>
+                <h1>Autonomous robot</h1>
                 <h3>Clemson University - International Center of Automotive Research</h3>
                 <p class="info">
                     The course 'Autonomy: Science and Systems' at CU-ICAR required programming a <u>Turtlebot3</u> robot to take on the following challenges.</p>
@@ -39,7 +39,7 @@
                 </p>
             </div>
             <div class="slide s13">
-                <h1>Motorcycle Gear Shifting Automation</h1>
+                <h1>Motorcycle gear shifting automation</h1>
                 <h3>Capstone Project - Bachelor's in Mechanical Engineering</h3>
                 <p class="info">
                     For our undergraduate project, we decided to design and fabricate a <u>bolt-on automation system</u> to convert a motorcycle's controls into those similar to an automatic scooter.<br>This included automating the <u>clutch, gears and throttle</u> to follow rider input while considering engine RPM, speed, etc. <br><br>This video was made as a submission to the CS50 MOOC course, and shows a representation of what we had imaged for the project.
@@ -52,7 +52,7 @@
         </div>
         <div class="section">
             <div class="slide s21">
-                <h1>Car Datalogger</h1>
+                <h1>Vehicle datalogger</h1>
                 <h3>Data collection during AutoX events</h3>
                 <p class="info">
                     As a challenge, I engineered a datalogger for my car to collect inertial and GPS data while participating in AutoX events.<br>The result was this ESP32-based device, for which more information can be found on <a style="color:grey" href="https://github.com/TanmayChhatbar/car_datalogger" target="_blank"><u>GitHub</u></a>.<br><br><u>TTGO TS 1.4</u> ESP32-based board, with built-in <u>MPU9250 IMU</u> and a microSD card reader, was used.<br><u>Adafruit Ultimate GPS</u> module is used to get GPS data.<br>Inertial data is collected at around 300Hz, GPS data is collected at 5Hz.
@@ -83,10 +83,10 @@
         </div>
         <div class="section">
             <div class="slide s31">
-                <h1>i1Pro 3 Automated Plotter 2021</h1>
+                <h1>i1Pro 3 automated plotter</h1>
                 <h3>Designed, manufactured and programmed by self</h3>
                 <p class="info">
-                    I took up a project for one of my mentors to automate a color-scanning tool using hobby-grade electronics.<br>An <u>Arduino Nano</u> board with a stepper board was used, running fully custom-written <u>path calculation</u> software.<br>An intuitive <u>UI</u> was introduced along with a joystick to guide the process in multiple scanning modes and velocities, including a manual mode.<br>The hardware was designed in <u>CAD</u>, with a number of parts being <u>3D printed</u>.<br><br>The video shows testing of the solution.
+                    In 2021, I took up a project for one of my mentors to automate a color-scanning tool using hobby-grade electronics.<br>An <u>Arduino Nano</u> board with a stepper board was used, running fully custom-written <u>path calculation</u> software.<br>An intuitive <u>UI</u> was introduced along with a joystick to guide the process in multiple scanning modes and velocities, including a manual mode.<br>The hardware was designed in <u>CAD</u>, with a number of parts being <u>3D printed</u>.<br><br>The video shows testing of the solution.
                 </p>
                 </br>
                 <p>
@@ -105,7 +105,7 @@
                 </p>
             </div>
             <div class="slide s33">
-                <h1>Project Render</h1>
+                <h1>Project render</h1>
                 <h3>In learning Blender modelling software</h3>
                 <p class="info">
                     I learnt how to use blender, the software out of interest.<br>This short clip serves to showcase my skills in modelling and animation as a submission for one of the certified courses on a MOOC that taught blender.<br><br>All animations on this page, and their assets have been modelled, textured and rendered by me.
@@ -179,10 +179,10 @@
         </div>
         <div class="section">
             <div class="slide s51">
-                <h1>Improvements in the Factory</h1>
+                <h1>Improvements in the factory</h1>
                 <h3>Stagnation isn't good for mind or business</h3>
                 <p class="info">
-                    During my undergraduate studies, I designed and manufactured multiple automation solutions and miscellaneous devices for streamlining workflow in processing of potato starch, soaps and detergents. for use in a factory.<br>These include
+                    During my undergraduate studies, I designed and manufactured multiple automation solutions and miscellaneous devices for streamlining workflow in processing of potato starch, soaps and detergents. for use in a factory.<br>These include:
 					<ol class="feat">
 						<li>Automatic bottle fillers for packaging soaps and detergents</li>
 						<li>Sound-based acid flow-rate and quantity estimation for positive displacement pumps.</li>
