--- a/projects_gen_backup.html
+++ b/projects_gen_backup.html
@@ -83,6 +83,41 @@
         </div>
         <div class="section">
             <div class="slide s31">
+                <h1>i1Pro 3 automated plotter</h1>
+                <h3>Designed, manufactured and programmed by self</h3>
+                <p class="info">
+                    In 2021, I took up a project for one of my mentors to automate a color-scanning tool using hobby-grade electronics.<br>An <u>Arduino Nano</u> board with a stepper board was used, running fully custom-written <u>path calculation</u> software.<br>An intuitive <u>UI</u> was introduced along with a joystick to guide the process in multiple scanning modes and velocities, including a manual mode.<br>The hardware was designed in <u>CAD</u>, with a number of parts being <u>3D printed</u>.<br><br>The video shows testing of the solution.
+                </p>
+                </br>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/pWplQDCc0bk"></iframe>
+                </p>
+            </div>
+            <div class="slide s32">
+                <h1>DIY Smartwatch</h1>
+                <h3>Designed, manufactured and programmed by self</h3>
+                <p class="info">
+                    Expenditure on education and improvement is okay, buying frivolous objects is not.<br>I wanted a smartwatch.<br>There's only one solution. <a style="color:grey" href="https://github.com/TanmayChhatbar/esp32_smartwatch" target="_blank"><u>DIY</u></a><br><br>The watch is capable of connecting to WiFi to <u>fetch time</u>, as well as keeping count of the number of <u>steps</u> the user walks daily.
+                </p>
+                </br>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/iW4tt_eioQQ"></iframe>
+                </p>
+            </div>
+            <div class="slide s33">
+                <h1>Project render</h1>
+                <h3>In learning Blender modelling software</h3>
+                <p class="info">
+                    I learnt how to use blender, the software out of interest.<br>This short clip serves to showcase my skills in modelling and animation as a submission for one of the certified courses on a MOOC that taught blender.<br><br>All animations on this page, and their assets have been modelled, textured and rendered by me.
+                </p>
+                </br>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/FBkQdyRUgO4"></iframe>
+                </p>
+            </div>
+        </div>
+        <div class="section">
+            <div class="slide s41">
                 <h1>Boeing Aeromodelling 2019-20 - IIT Kharagpur</h1>
                 <h3>Finishing 3<sup>rd</sup> place overall</h3>
                 <p class="info">
@@ -95,7 +130,7 @@
                     <iframe src="https://www.youtube.com/embed/twtrokqZ5k0"></iframe>
                 </p>
             </div>
-            <div class="slide s32">
+            <div class="slide s42">
                 <h1>SAE Aero Design East 2019</h1>
                 <h3>7th* in Mission Performance</h3>
                 <p class="info">
@@ -107,7 +142,7 @@
                     <iframe src="https://www.youtube.com/embed/wKr7KCYWeT8"></iframe>
                 </p>
             </div>
-            <div class="slide s33">
+            <div class="slide s43">
                 <h1>Speedy G</h1>
                 <h3>"I am Speed!", said the Little Bird</h3>
                 <p class="info">
@@ -118,7 +153,7 @@
                     <iframe src="https://www.youtube.com/embed/T2X-0we-XOU"></iframe>
                 </p>
             </div>
-            <div class="slide s34">
+            <div class="slide s44">
                 <h1>The adventures of foomie</h1>
                 <h3>The tiniest little RC plane I made</h3>
                 <p class="info">
@@ -130,7 +165,7 @@
                     <iframe src="https://www.youtube.com/embed/nO6BWNPSGuY"></iframe>
                 </p>
             </div>
-            <div class="slide s35">
+            <div class="slide s45">
                 <h1>Aerobatics</h1>
                 <h3>What fun is flying straight</h3>
                 <p class="info">
@@ -139,41 +174,6 @@
                 </br>
                 <p>
                     <iframe src="comingsoon.html"></iframe>
-                </p>
-            </div>
-        </div>
-        <div class="section">
-            <div class="slide s41">
-                <h1>i1Pro 3 automated plotter</h1>
-                <h3>Designed, manufactured and programmed by self</h3>
-                <p class="info">
-                    In 2021, I took up a project for one of my mentors to automate a color-scanning tool using hobby-grade electronics.<br>An <u>Arduino Nano</u> board with a stepper board was used, running fully custom-written <u>path calculation</u> software.<br>An intuitive <u>UI</u> was introduced along with a joystick to guide the process in multiple scanning modes and velocities, including a manual mode.<br>The hardware was designed in <u>CAD</u>, with a number of parts being <u>3D printed</u>.<br><br>The video shows testing of the solution.
-                </p>
-                </br>
-                <p>
-                    <iframe src="https://www.youtube.com/embed/pWplQDCc0bk"></iframe>
-                </p>
-            </div>
-            <div class="slide s42">
-                <h1>DIY Smartwatch</h1>
-                <h3>Designed, manufactured and programmed by self</h3>
-                <p class="info">
-                    Expenditure on education and improvement is okay, buying frivolous objects is not.<br>I wanted a smartwatch.<br>There's only one solution. <a style="color:grey" href="https://github.com/TanmayChhatbar/esp32_smartwatch" target="_blank"><u>DIY</u></a><br><br>The watch is capable of connecting to WiFi to <u>fetch time</u>, as well as keeping count of the number of <u>steps</u> the user walks daily.
-                </p>
-                </br>
-                <p>
-                    <iframe src="https://www.youtube.com/embed/iW4tt_eioQQ"></iframe>
-                </p>
-            </div>
-            <div class="slide s43">
-                <h1>Project render</h1>
-                <h3>In learning Blender modelling software</h3>
-                <p class="info">
-                    I learnt how to use blender, the software out of interest.<br>This short clip serves to showcase my skills in modelling and animation as a submission for one of the certified courses on a MOOC that taught blender.<br><br>All animations on this page, and their assets have been modelled, textured and rendered by me.
-                </p>
-                </br>
-                <p>
-                    <iframe src="https://www.youtube.com/embed/FBkQdyRUgO4"></iframe>
                 </p>
             </div>
         </div>
@@ -240,8 +240,8 @@
         new fullpage('#fullPage', {
             autoScrolling: true,
             navigation: true,
-            anchors: ['auto_robo','auto_model','aero','other','imp','fun'],
-            navigationTooltips: ['Automotive robotics','Automotive data & analysis','Aeromodelling','Other projects','Improvements','Activity'],
+            anchors: ['auto_robo','auto_model','other','aero','imp','fun'],
+            navigationTooltips: ['Automotive robotics','Automotive data & analysis','Other projects','Aeromodelling','Improvements','Activity'],
             showActiveTooltip: true,
             slidesNavigation: true,
             controlArrows: false,
