--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <br>
                 <h4><a href="projects_gen.html" class="btn-custom">My projects</a> 🔗</h4>
                 <br>
-                <h5><a href="resume.pdf" class="btn-custom">My Résumé</a> 🔗</h5>
+                <h5><a href="resume_v4.pdf" class="btn-custom">My Résumé</a> 🔗</h5>
                 <br>
                 <hr color="white" width="75%" />
                 <br>
