deep orange vid& C:/Users/Tanmay/AppData/Local/Programs/Python/Python39/python.exe t:/Documents/Resume/github/local_fullpage/python_generator/gen.py

--- a/projects_gen_backup.html
+++ b/projects_gen_backup.html
@@ -67,11 +67,11 @@
                 <h3>Deep Orange 13-14 - Clemson University</h3>
                 <p class="info">
                     Estimation of forces and resultant motion is an important component of vehicle design and control.<br>
-					We have modelled tools of varying complexity to better understand the dynamic limits of the vehicle we develop. Some of them are shown below<br><br>
+					We have modelled tools of varying complexity to better understand the dynamic limits of the vehicle we develop. Some of them are shown below.<br><br>
 					<ol class="feat">
+						<li> An overview of the Deep Orange 13-14 project.</li>
 						<li> Shows the most complex, most "true" model, created in Simscape Multibody.<br>It considers the tracks around the wheels and its interaction with the ground.</li>
 						<li> Shows a much simpler, real-time capable model in MATLAB.</li>
-						<li> Compilation of funny and failed simulations, just for laughs.</li>
 						</ol>
                 </p>
                 </br>
