deep orange improved

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -76,6 +76,7 @@
                 </p>
                 </br>
                 <p>
+                    <iframe src="https://www.youtube.com/embed/B7_-ia0J6QU"></iframe>
                     <iframe src="https://www.youtube.com/embed/IsC2Qz7YGao"></iframe>
                     <iframe src="https://www.youtube.com/embed/obmg_0Rq8ow"></iframe>
                 </p>
