--- a/projects_gen_backup.html
+++ b/projects_gen_backup.html
@@ -71,7 +71,7 @@
 					<ol class="feat">
 						<li> An overview of the Deep Orange 13-14 project.</li>
 						<li> Shows the most complex, most "true" model, created in Simscape Multibody.<br>It considers the tracks around the wheels and its interaction with the ground.</li>
-						<li> Shows a much simpler, real-time capable model in MATLAB.</li>
+						<li> Shows a much simpler, real-time capable model developed in MATLAB.</li>
 						</ol>
                 </p>
                 </br>
