add email to index

--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
     <div>
         <div class="col-md-12 text text-center">
             <div class="img mb-6 pt-5"><img class="rounded-circle" src="images/photo.jpeg" alt=""
-                    style="height:35vh;width:height;"></div>
+                    style="height:30vh;width:height;"></div>
             <div class="desc pt-3">
                 <h3 class="subheading">Hello! I'm</h3>
                 <h1 class="mb-6">Tanmay Chhatbar</h1>
                 <br>
 
                 <p class="mb-7">
-                    Studying at Clemson University (CU-ICAR)</p>
-
+                    Studying Master's in Automotive Engineering,<br> Engaged in research at Clemson University (CU-ICAR)
+                </p>
+                <br>
                 <hr color="white" width="50%" />
                 <p class="mb-6">
                     <script type="text/javascript">
@@ -80,13 +81,13 @@
                     </script>
                 </p>
 
-                <br>
+                <!-- <br> -->
                 <h4><a href="projects_gen.html" class="btn-custom">My projects</a> 🔗</h4>
                 <br>
                 <h5><a href="resume_v4.pdf" class="btn-custom">My Résumé</a> 🔗</h5>
                 <br>
                 <hr color="white" width="75%" />
-                <br>
+                <!-- <br> -->
 
                 <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="images/logo_linkedin.png" width=24px></a>
                 <a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="images/logo_github_light.png" width=24px></a>
@@ -95,7 +96,14 @@
                 <a class="mylinks" href="https://www.printables.com/social/202355-tanmaychhatbar/about" target="_blank"><img src="images/logo_printables.jpg" width=24px></a>
                 <!-- <a class="mylinks" href="https://www.thingiverse.com/tanmaychhatbar/designs" target="_blank"><img src="images/logo_thingiverse.png" width=24px></a> -->
                 <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="images/logo_insta.png" width=24px></a>
-                
+
+                <hr color="white" width="40%" />
+                <br>
+
+                <a href = "mailto: tchhatb@clemson.edu" class="btn-custom">University e-mail ✉</a>
+                <br>
+                <a href = "mailto: tanmaychhatbar@gmail.com" class="btn-custom">Personal e-mail ✉</a>
+
                 <br><br><br>
             </div>
         </div>
