--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 
                 <div>
                     <!-- <br> -->
-                    <h4><a href="projects_gen.html" class="btn-custom">My projects</a> 🔗</h4>
-                    <br>
                     <h4><a href="resume_v4.pdf" class="btn-custom">My Résumé</a> 🔗</h4>
+                    <br>
+                    <h4><a href="#auto_robo" class="btn-custom">My projects</a> 🔗</h4>
                     <!-- <br> -->
                     <hr color="white" width="75%" align="left"/>
                     <!-- <br> -->
