--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             background: #000;
             width: 100%;
             height: 100%;
-            margin-left: 30px;
         }
 /* 
         .mylinks {
@@ -63,7 +62,7 @@
     </style>
 </head>
 
-    <div>
+    <div style="margin-left: 10%">
         <!-- <div class="col-md-12 text text-center"> -->
         <div class="col-md-12 text">
             <div class="img mb-6 pt-5"><img class="rounded-circle" src="images/photo.jpeg" alt=""
@@ -76,7 +75,7 @@
                 <p class="mb-7">
                     Studying Master's in Automotive Engineering,<br> Engaged in research at Clemson University (CU-ICAR)
                 </p>
-                <!-- <br> -->
+                <br>
                 <hr color="white" width="50%" align="left"/>
                 <p class="mb-6">
                     <script type="text/javascript">
@@ -100,7 +99,7 @@
                     <h4><a href="resume_v4.pdf" class="btn-custom">My Résumé</a> 🔗</h4>
                     <br>
                     <h4><a href="#auto_robo" class="btn-custom">My projects</a> 🔗</h4>
-                    <!-- <br> -->
+                    <br>
                     <hr color="white" width="75%" align="left"/>
                     <!-- <br> -->
     <!-- 
