--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
         new fullpage('#fullPage', {
             autoScrolling: true,
             navigation: true,
-            anchors: ['about_me','auto_robo','auto_model','aero','other','imp','fun'],
-            navigationTooltips: ['About me','Automotive robotics','Automotive data & analysis','Aeromodelling','Other projects','Improvements','Activity'],
+            anchors: ['about_me','auto_model','auto_robo','aero','other','imp','fun'],
+            navigationTooltips: ['About me','Automotive data & analysis','Automotive robotics','Aeromodelling','Other projects','Improvements','Activity'],
             showActiveTooltip: true,
             slidesNavigation: true,
             controlArrows: false,
