--- a/index.html
+++ b/index.html
@@ -116,8 +116,26 @@
                     <iframe src="https://www.youtube.com/embed/IsC2Qz7YGao"></iframe>
                     <iframe src="https://www.youtube.com/embed/obmg_0Rq8ow"></iframe>
                 </p>
+            </div><div class="slide s12">
+                <h1>Tractor-trailer modelling</h1>
+                <h3>CU-ICAR</h3>
+                <p class="info">
+                    A fully configurable simplified tractor-trailer model was created. For small angles, this model should provide realistic results. The model is hence useful as a plant model to develop, verify and optimize controllers in simulation. <br>
+					The following assumptions were made to simplify the model.<br><br>
+					<ol class="feat">
+						<li> Linear tyre model.</li>
+						<li> No lateral load transfer. </li>
+						<li> No moments due to hitch forces. </li>
+                        <li> No suspension, ideal flat road. </li>
+                    </ol>
+                </p>
+                </br>
+                <p>
+                    <iframe src="https://www.youtube.com/embed/9ZqnEQew_ug"></iframe>
+                </p>
             </div>
-            <div class="slide s12">
+            
+            <div class="slide s13">
                 <h1>Vehicle datalogger</h1>
                 <h3>Data collection during AutoX events</h3>
                 <p class="info">
