--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </p>
                 
                 <div>
-                    <h4><a href="resume_v5g.pdf" class="btn-custom">My Résumé</a> 🔗</h4>
+                    <h4><a href="resume_v5.pdf" class="btn-custom">My Résumé</a> 🔗</h4>
                     <br>
                     <h4><a href="#auto_model" class="btn-custom">My projects</a> 🔗</h4>
                     <br>
