change prusaprinters link

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <li><a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="images/logo_github_light.png" width=24px></a></li>
         <li><a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="images/logo_grabcad.png" width=24px></a></li>
         <li><a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="images/logo_yt_light.png" width=24px></a></li>
-        <li><a class="mylinks" href="https://www.printables.com/social/202355-tanmaychhatbar/about" target="_blank"><img src="images/logo_printables.jpg" width=24px></a></li>
+        <li><a class="mylinks" href="https://www.printables.com/@tanmaychhatbar" target="_blank"><img src="images/logo_printables.jpg" width=24px></a></li>
         <li><a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="images/logo_insta.png" width=24px></a></li>
         <p style="text-align: right; padding-right: 2em; color: #418FDD"><b>Tanmay Chhatbar</b></p>
     </ul>
